--- a/products/templates/products/product_create.html
+++ b/products/templates/products/product_create.html
@@ -1,1 +1,17 @@
-<h1>Product create</h1>
+{% extends 'base.html' %}
+
+{% block content %}
+
+<form enctype="multipart/form-data" method="POST"> 
+    {% csrf_token %}
+
+   <li>Title: {{ form.title }}</li><br>
+   <li>Image: {{ form.image }}</li><br>
+   <li>Description: {{ form.description}}</li><br>
+   <li>Price: {{ form.price }} </li><br>
+   <li>Category: {{ form.category}} </li><br>
+    
+    <input type="submit" value='Save' />
+</form>
+
+{% endblock %}
