--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My website</title>
+        {% block css %}
+        {% endblock %}
+
     </head>
     <body>
-        {% block content %} {% endblock %}
-        {% include 'navbar.html' %}
+        {% include 'navbar.html' %} <!--El include "importa" el archivo html-->
+        {% block content %} <!--Lo de aca puede ser reemplazado con otro {% block content %} en el .html--> {% endblock %}
     </body>
+
+    {% block js %}{% endblock %}
 </html>
