added nav links, buttons

--- a/static/navbar/css/style.css
+++ b/static/navbar/css/style.css
@@ -1,373 +1,1 @@
-:root {
-  --emperor: #616161;
-  --brown: #618bb3;
-  --transition: all 0.5s ease-in-out;
-}
-
-* {
-  padding: 0;
-  margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: "Overpass", sans-serif;
-}
-
-a {
-  color: #000;
-  text-decoration: none;
-}
-
-ul li {
-  list-style-type: none;
-}
-
-button {
-  outline: 0;
-  cursor: pointer;
-}
-
-.container {
-  width: 90vw;
-  margin: 0 auto;
-}
-
-.center {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.text {
-  margin: 0.6rem 0;
-  color: #e0e0e0;
-  font-weight: 200;
-  word-spacing: 2px;
-}
-
-#featured {
-  max-width: 500px;
-  max-height: 600px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  cursor: pointer;
-  border: 2px solid black;
-}
-
-.thumbnail {
-  -o-object-fit: cover;
-     object-fit: cover;
-  max-width: 180px;
-  max-height: 100px;
-  cursor: pointer;
-  opacity: 0.5;
-  margin: 5px;
-  border: 2px solid black;
-}
-
-.thumbnail:hover {
-  opacity: 1;
-}
-
-.active {
-  opacity: 1;
-}
-
-#slide-wrapper {
-  max-width: 500px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  min-height: 100px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#slider {
-  width: 440px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  overflow-x: hidden;
-}
-
-.arrow {
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
-  -webkit-transition: .3s;
-  transition: .3s;
-}
-
-.arrow:hover {
-  opacity: .5;
-  width: 35px;
-  height: 35px;
-}
-
-.header {
-  min-height: 30vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: stretch;
-      -ms-flex-pack: stretch;
-          justify-content: stretch;
-}
-
-.navbar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background: #616161;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  padding: 1rem 0;
-  border-bottom: 1.5px solid #000;
-}
-
-.navbar-brand {
-  padding: 30px;
-  font-size: 1.2rem;
-  font-weight: 800;
-  color: #000;
-}
-
-.navbar-toggler {
-  z-index: 1000;
-  padding: 0.2rem 0.4rem;
-  font-size: 1.6rem;
-  border: none;
-  background: none;
-  color: #000;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.navbar-toggler:hover {
-  color: var(--brown);
-}
-
-.nav-btns, .nav-icons {
-  display: none;
-}
-
-.navbar-collapse {
-  z-index: 999;
-  position: absolute;
-  top: 0;
-  right: 0;
-  background: var(--emperor);
-  height: 70%;
-  width: 0;
-  overflow: hidden;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.nav-item {
-  margin: 0.7rem 0;
-  padding: 1rem 0;
-  text-align: center;
-}
-
-.nav-link {
-  color: var(--brown);
-  text-transform: uppercase;
-  letter-spacing: 1.3rem;
-  font-size: 1.3rem;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.nav-link i {
-  font-size: 25px;
-}
-
-.nav-link:hover {
-  text-shadow: 0 0 4px #fff;
-}
-
-.navbar-nav {
-  margin-top: 7rem !important;
-  width: 90vw;
-  margin: 0 auto;
-}
-
-/**********************/
-.showNav {
-  width: 100%;
-}
-
-/**********************/
-.footer {
-  text-align: center;
-  background: #616161;
-}
-
-.footer-wrapper {
-  padding: 5rem 0;
-}
-
-.footer-wrapper div {
-  margin: 2.5rem 0;
-}
-
-.footer-links li {
-  margin: 0.6rem 0;
-}
-
-.footer-links li a {
-  text-transform: uppercase;
-  font-weight: 200;
-  opacity: 0.9;
-  color: #f1f1f1;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.footer-links li a:hover {
-  color: var(--brown);
-}
-
-.footer-text {
-  padding: 1.7rem 0;
-}
-
-/* media queries */
-@media screen and (min-width: 500px) {
-  .navbar-brand {
-    font-size: 1.5rem;
-  }
-  .nav-icons {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  .nav-icons span {
-    color: #000;
-    font-size: 1.3rem;
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-    -webkit-transition: var(--transition);
-    transition: var(--transition);
-  }
-  .nav-icons span:hover {
-    opacity: 0.8;
-  }
-}
-
-@media screen and (min-width: 992px) {
-  .navbar-toggler {
-    display: none;
-  }
-  .nav-btns {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  .nav-btns button {
-    display: inline-block;
-    font-size: 0.9rem;
-    font-weight: 300;
-    opacity: 0.9;
-    padding: 0.4rem 0;
-    border-width: 0.5px;
-    border-style: solid;
-    margin: 0 0.5rem;
-    width: 100px;
-    -webkit-transition: var(--transition);
-    transition: var(--transition);
-  }
-  .nav-btns button:hover {
-    opacity: 1;
-  }
-  .nav-btns button:first-child {
-    border-color: var(--emperor);
-    background: var(--emperor);
-    color: #000;
-  }
-  .nav-btns button:first-child:hover {
-    border-color: #000;
-    background: transparent;
-  }
-  .nav-btns button:last-child {
-    border-color: #000;
-    background: transparent;
-    color: #000;
-  }
-  .nav-btns button:last-child:hover {
-    border-color: var(--emperor);
-    background: var(--emperor);
-  }
-  .navbar-extra-content {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 0 30%;
-            flex: 1 0 30%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    padding: 1rem 0;
-  }
-  .navbar-collapse {
-    position: relative;
-    width: 100%;
-    background: transparent;
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 40%;
-            flex: 0 0 40%;
-  }
-  .navbar-nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin: 0 !important;
-  }
-  .nav-item {
-    padding: 0;
-    margin: 0 0.8rem;
-  }
-  .nav-link {
-    margin: 0 2rem;
-    font-size: 1rem;
-    letter-spacing: normal;
-    text-transform: capitalize;
-    color: #000;
-  }
-  .nav-link:hover {
-    text-shadow: none;
-    color: var(--brown);
-  }
-}
-
-.resize-animation-stopper * {
-  -webkit-animation: none !important;
-          animation: none !important;
-  -webkit-transition: none !important;
-  transition: none !important;
-}
-/*# sourceMappingURL=style.css.map */
+/* No CSS *//*# sourceMappingURL=style.css.map */
