--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         {% include 'navbar.html' %} <!--El include "importa" el archivo html-->
-        {% block content %} <!--Lo de aca puede ser reemplazado con otro {% block content %} en el .html--> {% endblock %}
+        {% block content %} <!--Lo de aca puede ser reemplazado con otro % block content % en el .html--> {% endblock %}
     </body>
 
-    {% block js %}<!--Lo mismo aca, esto se reemplaza poniendo {% block js %} en el archivo html-->{% endblock %}
+    {% block js %}<!--Lo mismo aca, esto se reemplaza poniendo % block js % en el archivo html-->{% endblock %}
 </html>
