update navbar, add shop cart and burguer menu button

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -40,6 +40,14 @@ seguimos poniendo el resto del path segun corresponda-->
         </div>
 
         <div class="navbar-side">
+            <ul class="nav-item-side">
+                <span class="center">
+                    Trending
+                </span>
+                <span class="center">
+                    Visit us
+                </span>
+            </ul>
             <div class="nav-btns">
                 <button type="button">
                     <i class= "fas fa-user-circle"></i>
@@ -49,8 +57,15 @@ seguimos poniendo el resto del path segun corresponda-->
                     <i class="fas fa-key"></i>
                     Sign up
                 </button>
+                <button type="button">
+                    <i class="fas fa-shopping-cart" title="cart"></i>
+                </button>
             </div>
         </div>
+
+        <button type="button" class="navbar-toggler center" id="navbar-toggler">
+            <i class="fas fa-bars fa-fw"></i>
+        </button>
     </nav>
 
 </header>
