--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -62,7 +62,10 @@ seguimos poniendo el resto del path segun corresponda-->
                 </button>
             </div>
         </div>
+    <!--end navbar-->
 
+
+        <!--burguer menu button-->
         <button type="button" class="navbar-toggler center" id="navbar-toggler">
             <i class="fas fa-bars fa-fw"></i>
         </button>
@@ -70,7 +73,7 @@ seguimos poniendo el resto del path segun corresponda-->
 
 </header>
 
-<!--js-->
+              <!--js-->
 {% block js %}<script src="{% static 'navbar/javascript/script.js' %}"></script>{% endblock %}
 
 
