--- a/static/navbar/css/style.css
+++ b/static/navbar/css/style.css
@@ -1,1 +1,34 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+/***       font       ***/
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&family=Roboto&display=swap");
+/***       root       ***/
+:root {
+  --primary: #b5f7d2;
+  --highlight: #16d066;
+  --transition: all 0.5 ease-in-out;
+}
+
+/***       presets       ***/
+* {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+a {
+  color: #000;
+  text-decoration: none;
+}
+
+ul li {
+  list-style-type: none;
+}
+
+button {
+  outline: 0;
+  cursor: pointer;
+}
+
+/***       navbar style       ***/
+/*# sourceMappingURL=style.css.map */
