--- a/static/navbar/css/style.css
+++ b/static/navbar/css/style.css
@@ -3,6 +3,8 @@
 /***       root       ***/
 :root {
   --primary: #b5f7d2;
+  --shadow: #80ffb7;
+  --secondary: #005223;
   --highlight: #16d066;
   --transition: all 0.5 ease-in-out;
 }
@@ -31,4 +33,118 @@ button {
 }
 
 /***       navbar style       ***/
+.container {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.center {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: stretch;
+      -ms-flex-pack: stretch;
+          justify-content: stretch;
+}
+
+.navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: var(--primary);
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.navbar-logo {
+  padding: 30px;
+  font-size: 1.2rem;
+  font-weight: 800;
+  color: var(--secondary);
+}
+
+.navbar-logo:hover {
+  text-shadow: 6px 8px 7px var(--shadow);
+}
+
+.nav-btns {
+  display: none;
+}
+
+.navbar-nav {
+  margin-top: 7rem !important;
+  width: 90vw;
+  margin: 0 auto;
+}
+
+/***       navbar collapse style       ***/
+.navbar-toggler {
+  z-index: 1000;
+  padding: 0.2rem 0.4rem;
+  font-size: 1.6rem;
+  border: none;
+  background: none;
+  color: var(--secondary);
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+
+.navbar-collapse {
+  z-index: 999;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: var(--primary);
+  height: 70%;
+  width: 0;
+  overflow: hidden;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+
+.nav-item {
+  margin: 0.7rem 0;
+  padding: 1rem 0;
+  text-align: center;
+}
+
+.nav-link {
+  color: var(--secondary);
+  text-transform: uppercase;
+  font-size: 1.3rem;
+}
+
+.nav-link .span-about {
+  color: #000;
+}
+
+.nav-link:hover {
+  text-shadow: 0 0 4px var(--highlight);
+}
+
+.nav-link .span-about:hover {
+  text-shadow: 6px 8px 7px var(--shadow);
+}
+
+.showNav {
+  width: 100%;
+}
 /*# sourceMappingURL=style.css.map */
