--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,6 +19,9 @@ seguimos poniendo el resto del path segun corresponda-->
             ECOMMERCE
         </a>
 
+            
+        </div>
+
         <div class="navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
