added search box

--- a/static/navbar/css/style.scss
+++ b/static/navbar/css/style.scss
@@ -70,6 +70,28 @@ button{
     text-shadow: 6px 8px 7px var(--shadow);
 }
 
+.search-container{
+    button{
+        background: #adffd1;
+        font-size: 0.9rem;
+        cursor: pointer;
+        padding: 6px 10px;
+        border: 1px solid var(--shadow);
+    }
+    input[type=text]{
+        font-size: 0.9rem;
+        padding: 6px;
+        border: 1px solid var(--shadow);
+        width: 450px;
+        background: #adffd1;
+    }
+}
+
+.search-container button:hover{
+    background: var(--shadow);
+    border-color: var(--highlight);
+}
+
 .nav-btns{
     display: none;
 }
