--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,6 +19,12 @@ seguimos poniendo el resto del path segun corresponda-->
             ECOMMERCE
         </a>
 
+        <form>
+            <div class="search-container">
+                <input type="text" placeholder="Search..." name="search">
+                <button type="submit"><i class="fa fa-search"></i></button>
+            </div>
+        </form>
             
         </div>
 
