--- a/static/navbar/css/style.scss
+++ b/static/navbar/css/style.scss
@@ -70,28 +70,6 @@ button{
     text-shadow: 6px 8px 7px var(--shadow);
 }
 
-.search-container{
-    button{
-        background: #adffd1;
-        font-size: 0.9rem;
-        cursor: pointer;
-        padding: 6px 10px;
-        border: 1px solid var(--shadow);
-    }
-    input[type=text]{
-        font-size: 0.9rem;
-        padding: 6px;
-        border: 1px solid var(--shadow);
-        width: 450px;
-        background: #adffd1;
-    }
-}
-
-.search-container button:hover{
-    background: var(--shadow);
-    border-color: var(--highlight);
-}
-
 .nav-btns{
     display: none;
 }
@@ -129,6 +107,10 @@ button{
     margin: 0.7rem 0;
     padding: 1rem 0;
     text-align: center;
+}
+
+.search-container{
+    display: none;
 }
 
 .nav-link{
@@ -173,6 +155,7 @@ button{
     .nav-item-side span:hover{
         opacity: 0.7;
     }
+
 }
 
 @media screen and (min-width: 992px){
@@ -194,6 +177,29 @@ button{
             width: 100px;
             transition: var(--transition);
         }
+    }
+
+    .search-container{
+        display: flex;
+        button{
+            background: #adffd1;
+            font-size: 0.9rem;
+            cursor: pointer;
+            padding: 6px 10px;
+            border: 1px solid var(--shadow);
+        }
+        input[type=text]{
+            font-size: 0.9rem;
+            padding: 6px;
+            border: 1px solid var(--shadow);
+            width: 450px;
+            background: #adffd1;
+        }
+    }
+    
+    .search-container button:hover{
+        background: var(--shadow);
+        border-color: var(--highlight);
     }
 
     .nav-btns button:hover{
