--- a/accounts/templates/user_registration.html
+++ b/accounts/templates/user_registration.html
@@ -1,5 +1,19 @@
 {% extends 'base.html' %}
 
-{% block content %}
-<h1>Registration</h1>
+<form method='POST', action=''>
+    {% csrf_token %}
+
+    {{ form.username.label }}
+    {{ form.username }}
+
+    {{ form.email.label }}
+    {{ form.email }}
+
+    {{ form.password1.label }}
+    {{ form.password1 }}
+
+    {{ form.password2.label }}
+    {{ form.password2 }}
+</form>
+
 {% endblock %}
