added homepage.html, added images

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,9 @@
     <head>
         {% block css %}
         {% endblock %}
-
+        {% block title %}
+        <title>ECOMMERCE</title>
+        {% endblock %}
     </head>
     <body>
         {% include 'navbar.html' %} <!--El include "importa" el archivo html-->
