--- a/static/homepage/css/style-home.scss
+++ b/static/homepage/css/style-home.scss
@@ -1,10 +1,3 @@
-body{
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .img-slider{
     position: relative;
     width: 800px;
@@ -20,4 +13,10 @@ body{
         width: 100px;
         border-radius: 5px;
     }
+}
+
+.img-slider .slide .info{
+    position: absolute;
+    top: 0;
+    padding: 15px 30px;
 }
