--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
+
 {% load static %}
+
 {% block css %}
-<link rel="stylesheet" href="{% static 'homepage/css/style.css' %}">
+<link rel="stylesheet" href="{% static 'homepage/css/style-home.css' %}">
 <script src="https://kit.fontawesome.com/f363b53072.js"></script>
 {% endblock %}
 
