--- a/static/homepage/css/style-home.css
+++ b/static/homepage/css/style-home.css
@@ -9,17 +9,138 @@
   z-index: 1;
   position: absolute;
   width: 100%;
+  -webkit-clip-path: circle(0% at 0 50%);
+          clip-path: circle(0% at 0 50%);
 }
 
 .img-slider img {
   z-index: 1;
-  width: 100px;
+  width: 100%;
   border-radius: 5px;
+}
+
+.img-slider .slide.active {
+  -webkit-clip-path: circle(150% at 0 50%);
+          clip-path: circle(150% at 0 50%);
+  -webkit-transition: 2s;
+  transition: 2s;
+  -webkit-transition-property: -webkit-clip-path;
+  transition-property: -webkit-clip-path;
+  transition-property: clip-path;
+  transition-property: clip-path, -webkit-clip-path;
 }
 
 .img-slider .slide .info {
   position: absolute;
   top: 0;
   padding: 15px 30px;
+}
+
+.img-slider .slide .info h2 {
+  color: #fff;
+  font-size: 45px;
+  text-transform: uppercase;
+  font-weight: 800;
+  letter-spacing: 2px;
+}
+
+.img-slider .slide .info p {
+  color: #fff;
+  background: rgba(0, 0, 0, 0.1);
+  font-size: 16px;
+  width: 60%;
+  padding: 10px;
+  border-radius: 4px;
+}
+
+.img-slider .navigation {
+  z-index: 2;
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  bottom: 30px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.img-slider .navigation .btn {
+  background: rgba(255, 255, 255, 0.5);
+  width: 12px;
+  height: 12px;
+  margin: 10px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+@media (max-width: 820px) {
+  .img-slider {
+    width: 600px;
+    height: 375px;
+  }
+  .img-slider .slide .info {
+    padding: 10px 25px;
+  }
+  .img-slider .slide .info h2 {
+    font-size: 35px;
+  }
+  .img-slider .slide .info p {
+    width: 70%;
+    font-size: 15px;
+  }
+  .img-slider .navigation {
+    bottom: 25px;
+  }
+  .img-slider .navigation .btn {
+    width: 10px;
+    height: 10px;
+    margin: 8px;
+  }
+}
+
+@media (max-width: 620px) {
+  .img-slider {
+    width: 400px;
+    height: 250px;
+  }
+  .img-slider .slide .info {
+    padding: 10px 20px;
+  }
+  .img-slider .slide .info h2 {
+    font-size: 30px;
+  }
+  .img-slider .slide .info p {
+    width: 80%;
+    font-size: 13px;
+  }
+  .img-slider .navigation {
+    bottom: 15px;
+  }
+  .img-slider .navigation .btn {
+    width: 8px;
+    height: 8px;
+    margin: 6px;
+  }
+}
+
+@media (max-width: 420px) {
+  .img-slider {
+    width: 320px;
+    height: 200px;
+  }
+  .img-slider .slide .info {
+    padding: 5px 10px;
+  }
+  .img-slider .slide .info h2 {
+    font-size: 25px;
+  }
+  .img-slider .slide .info p {
+    width: 90%;
+    font-size: 11px;
+  }
+  .img-slider .navigation {
+    bottom: 10px;
+  }
 }
 /*# sourceMappingURL=style-home.css.map */
