--- a/static/homepage/css/style-home.css
+++ b/static/homepage/css/style-home.css
@@ -74,6 +74,12 @@
   cursor: pointer;
 }
 
+.img-slider .navigation .btn.active {
+  background: #2696E9;
+  -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+}
+
 @media (max-width: 820px) {
   .img-slider {
     width: 600px;
