--- a/static/homepage/css/style-home.scss
+++ b/static/homepage/css/style-home.scss
@@ -60,6 +60,11 @@
     }
 }
 
+.img-slider .navigation .btn.active{
+    background: #2696E9;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+}
+
 @media (max-width: 820px){
     .img-slider{
         width: 600px;
