--- a/static/homepage/css/style-home.scss
+++ b/static/homepage/css/style-home.scss
@@ -1,3 +1,4 @@
+/***       image slider style       ***/
 .img-slider{
     position: relative;
     width: 800px;
@@ -65,6 +66,7 @@
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
 }
 
+/***       media querys       ***/
 @media (max-width: 820px){
     .img-slider{
         width: 600px;
