added user registration

--- a/accounts/templates/accounts/user_registration.html
+++ b/accounts/templates/accounts/user_registration.html
@@ -3,17 +3,7 @@
 <form method='POST', action=''>
     {% csrf_token %}
 
-    {{ form.username.label }} <br>
-    {{ form.username }}<br>
-    <br>
-    {{ form.email.label }}<br>
-    {{ form.email }}<br>
-    <br>
-    {{ form.password1.label }}<br>
-    {{ form.password1 }}<br>
-    <br>
-    {{ form.password2.label }}<br>
-    {{ form.password2 }}<br>
+   {{ form.as_p }}
 <br>
     <input type="submit" value='Save' />
 </form>
