added navbar logo url routing

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,7 +13,7 @@ seguimos poniendo el resto del path segun corresponda-->
 
     <!--navbar-->
     <nav class="navbar container">
-        <a href="#" class="navbar-logo">
+        <a href="{% url 'home_page' %}" class="navbar-logo">
             <i class="fas fa-dragon"></i>
             ECOMMERCE
         </a>
