--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -57,17 +57,23 @@ seguimos poniendo el resto del path segun corresponda-->
                 </span>
             </ul>
             <div class="nav-btns">
+                <a href="#">
                 <button type="button">
                     <i class= "fas fa-user-circle"></i>
                     Login
                 </button>
+                </a>
+                <a href="#">
                 <button type="button">
                     <i class="fas fa-key"></i>
                     Sign up
                 </button>
+                </a>
+                <a href="#">
                 <button type="button">
                     <i class="fas fa-shopping-cart" title="cart"></i>
                 </button>
+                </a>
             </div>
         </div>
     <!--end navbar-->
