added button redirection to navbar

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -57,13 +57,13 @@ seguimos poniendo el resto del path segun corresponda-->
                 </span>
             </ul>
             <div class="nav-btns">
-                <a href="#">
+                <a href="{% url 'login_page' %}">
                 <button type="button">
                     <i class= "fas fa-user-circle"></i>
                     Login
                 </button>
                 </a>
-                <a href="#">
+                <a href="{% url 'registration_page' %}">
                 <button type="button">
                     <i class="fas fa-key"></i>
                     Sign up
