--- a/accounts/templates/accounts/user_registration.html
+++ b/accounts/templates/accounts/user_registration.html
@@ -3,7 +3,10 @@
 <form method='POST', action=''>
     {% csrf_token %}
 
-   {{ form.as_p }}
+   {{form.username.label }}: {{ form.username }} <br>
+   {{ form.email.label }}: {{ form.email }} <br>
+   {{ form.password1.label }}: {{ form.password1 }} <br>
+   {{ form.password2.label }}: {{ form.password2 }} <br>
 <br>
     <input type="submit" value='Save' />
 </form>
