fixed minimal error

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -57,7 +57,7 @@ seguimos poniendo el resto del path segun corresponda-->
                 </span>
             </ul>
             <div class="nav-btns">
-                <a href="{% url 'login_page' %}">
+                <a href="{% url 'login' %}">
                 <button type="button">
                     <i class= "fas fa-user-circle"></i>
                     Login
