--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,11 @@
 
 {% block content %}
 
+{% if request.user.is_authenticated %}
+
+<h1>you are logged in</h1>
+
+{% endif %}
 
     <div class="img-slider">
         <div class="slide active">
