--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -63,7 +63,7 @@ seguimos poniendo el resto del path segun corresponda-->
                     Login
                 </button>
                 </a>
-                <a href="{% url 'registration_page' %}">
+                <a href="{% url 'register' %}">
                 <button type="button">
                     <i class="fas fa-key"></i>
                     Sign up
