--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
 <h2>Log In</h2>
+{% if messages %}
+{% for message in messages %}
+{{ message }}
+{% endfor %}
+{% endif %}
 <form method="post">
   {% csrf_token %}
   {{ form.username.label }}: {{ form.username }} <br> <br>
