--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,16 @@
 
 <h1>you are logged in</h1>
 
+
+
+{% endif %}
+
+{% if messages %}
+
+{% for message in messages %}
+{{ message }}
+{% endfor %}
+
 {% endif %}
 
     <div class="img-slider">
